More path fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script src="javascripts/jquery-1.9.1.js"></script>
-    <script src="javascripts/main.js"></script>
+    <script src="/rbbt/javascripts/jquery-1.9.1.js"></script>
+    <script src="/rbbt/javascripts/main.js"></script>
 
     <title>Rbbt by mikisvaz</title>
   </head>
