--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1><a href="/" style='color:white'>Rbbt</a></h1>
+        <h1><a href="/rbbt/" style='color:white'>Rbbt</a></h1>
         <h2>Ruby bioinformatics toolbox</h2>
         <a href="https://github.com/mikisvaz/rbbt" class="button"><small>View project on</small>GitHub</a>
       </div>
