--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <header>
       <div class="inner">
         <h1><a href="/rbbt/" style='color:white'>Rbbt</a></h1>
-        <h2>Ruby bioinformatics toolbox</h2>
+        <h2>Ruby bioinformatics toolkit</h2>
         <a href="https://github.com/mikisvaz/rbbt" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
